--- a/app/styles/sass/partials/themes/matan-light/_variable_overrides.scss
+++ b/app/styles/sass/partials/themes/matan-light/_variable_overrides.scss
@@ -1,2 +1,10 @@
+$text-color: #1d3d56;
+
 $navbar-default-bg: #ffffff;
 $navbar-default-link-active-bg: rgba(91, 91, 217, 0.2);
+
+$df-section-background: #F7F9FA;
+$df-headers-color: #2e2ea3;
+
+$well-bg: $df-section-background;
+$well-border: $df-section-background;
