--- a/app/admin_components/adf-home/views/download.html
+++ b/app/admin_components/adf-home/views/download.html
@@ -1,5 +1,5 @@
-<div id="downloadPage" class="container-fluid" style="padding-left: 10px">
-    <div class="row">
+<div id="downloadPage" class="container-fluid">
+    <div class="row" style="padding-top: 20px">
         <div class="col-xs-12 col-sm-7 col-md-6">
             <h3>DreamFactory Downloads</h3>
             <p>DreamFactory is an open source software package available under the Apache License. The source code is free to download, use, and share. You can install DreamFactory in a number of ways: using a cloud service, a local install, or on any Linux or Windows server. The links below provide access to downloads for your preferred platform.</p>
